Cleaning up the model training notebook

--- a/notebooks/Model_Training.ipynb
+++ b/notebooks/Model_Training.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Model Pre Training\n",
+    "# Model Training\n",
     "\n",
     "### Idea \n",
     "\n",
-    "Train a classification model using human radiograph images, and then fine tune on veterinary medical images\n",
+    "Train a classification model using human radiograph images. We will then use class activation mapping to extract heatmaps to help localize any lesions.\n",
     "\n",
     "For the dataset, labels were extracted from the radiologist report where: blank for unmentioned, 0 for negative, -1 for uncertain, and 1 for positive. See [here](https://stanfordmlgroup.github.io/competitions/chexpert/)\n",
     "\n",
@@ -56,6 +56,15 @@
     "from tensorflow.keras import layers\n",
     "\n",
     "from typing import List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!nvidia-smi"
    ]
   },
   {
@@ -181,19 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Old approach\n",
-    "\n",
-    "# u_one_features = ['Atelectasis', 'Edema']\n",
-    "# u_zero_features = ['Cardiomegaly', 'Consolidation', 'Pleural Effusion']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# New approach: use 1 as positive and everything else and negative\n",
+    "# use 1 as positive and everything else and negative\n",
     "\n",
     "u_one_features = []\n",
     "u_zero_features = chexnet_targets "
@@ -232,16 +229,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Extract out the patient and study of each image, using the filepath"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_labels_df['patient'] = train_labels_df.Path.str.split('/',3,True)[2]\n",
-    "train_labels_df  ['study'] = train_labels_df.Path.str.split('/',4,True)[3]\n",
+    "train_labels_df['patient'] = train_labels_df['Path'].apply(lambda x: os.path.split(os.path.split(os.path.split(x)[0])[0])[1])\n",
+    "train_labels_df['study'] = train_labels_df['Path'].apply(lambda x: os.path.split(os.path.split(x)[0])[1])\n",
     "\n",
-    "valid_labels_df['patient'] = valid_labels_df.Path.str.split('/',3,True)[2]\n",
-    "valid_labels_df  ['study'] = valid_labels_df.Path.str.split('/',4,True)[3]"
+    "valid_labels_df['patient'] = valid_labels_df['Path'].apply(lambda x: os.path.split(os.path.split(os.path.split(x)[0])[0])[1])\n",
+    "valid_labels_df['study'] = valid_labels_df['Path'].apply(lambda x: os.path.split(os.path.split(x)[0])[1])"
    ]
   },
   {
@@ -259,7 +263,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "full_df = pd.concat([train_labels_df, valid_labels_df])\n",
+    "full_df = pd.concat([train_labels_df, valid_labels_df], ignore_index=True)\n",
     "full_df.head()"
    ]
   },
@@ -310,15 +314,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "full_df.head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "full_df['path'] = '/data/' + full_df['Path']"
    ]
   },
@@ -337,10 +332,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Old targets\n",
-    "# targets = ['Atelectasis_u_one', 'Edema_u_one', 'Cardiomegaly_u_zero', 'Consolidation_u_zero', 'Pleural Effusion_u_zero']\n",
-    "\n",
-    "# New targets\n",
     "targets = [target + '_u_zero' for target in u_zero_features]"
    ]
   },
@@ -354,6 +345,13 @@
     "y_train = full_df[targets][~full_df['valid']].values\n",
     "X_val = full_df['path'][full_df['valid']].values\n",
     "y_val = full_df[targets][full_df['valid']].values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### View a sample of images and labels"
    ]
   },
   {
@@ -433,7 +431,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Augmented Image"
+    "## Augmented Image\n",
+    "\n",
+    "Most of the models test here are convolutional neural networks which have built-in translational equivariance as a result of the action of convolutional filters on the underlying image. This results in the classifier being translation invariant. However translation invariance is not the only invariance we would like our model to have, and for this reason it's important to have a large representative dataset so that many other invariances can be learned by the model during training. Augmentation is another way for us to help the model learn other invariances such as changes in brightness, saturation, contrast, etc."
    ]
   },
   {
@@ -523,7 +523,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Determine class weights "
+    "## Determine class weights\n",
+    "\n",
+    "We often need to deal with an imbalance of classes in our dataset, especially if we want to get good recall on under represented classes. One way to do that is by using class weights so that a relatively higher loss is given on misclassifications of the under represented classes. The amount of class weighting, between none and emulating a uniform distribution, depends on the tradeoff between precision and recall for the classes. For this we will use log-scaled class weighting which will make a relatively slight adjustment toward a more uniform distribution."
    ]
   },
   {
@@ -806,7 +808,7 @@
    },
    "outputs": [],
    "source": [
-    "def data_gen(X, y, batch_size, image_size=(TARGET_HEIGHT, TARGET_WIDTH), dtype=np.float32):\n",
+    "def data_gen(X, y, batch_size, image_size=(TARGET_HEIGHT, TARGET_WIDTH), dtype=np.float32, scale_image=True):\n",
     "    # Get total number of samples in the data\n",
     "    n = len(X)\n",
     "    steps = n//batch_size\n",
@@ -841,10 +843,6 @@
     "            else:\n",
     "                if np.random.uniform() < 0.15:\n",
     "                    img = tf.image.random_brightness(img, max_delta=0.2)\n",
-    "    #             if np.random.uniform() < 0.15:\n",
-    "    #                 img = tf.image.random_flip_up_down(img)\n",
-    "    #             if np.random.uniform() < 0.15:\n",
-    "    #                 img = tf.image.random_flip_left_right(img)\n",
     "                if np.random.uniform() < 0.15:\n",
     "                    img = tf.image.random_saturation(image=img, lower=0.8, upper=1.2)\n",
     "                if np.random.uniform() < 0.15:\n",
@@ -852,7 +850,8 @@
     "                if np.random.uniform() < 0.15:\n",
     "                    img = tf.image.random_contrast(image=img, lower=0.8, upper=1.2)\n",
     "            \n",
-    "            img = img/255.\n",
+    "            if scale_image:\n",
+    "                img = img/255.\n",
     "            \n",
     "            # resize image\n",
     "            img = tf.image.resize_with_pad(img, target_height=image_size[0], target_width=image_size[1])\n",
@@ -1005,11 +1004,11 @@
    },
    "outputs": [],
    "source": [
-    "# from tensorflow.keras.applications import ConvNeXtBase\n",
+    "from tensorflow.keras.applications import ConvNeXtBase\n",
     "\n",
-    "# input_tensor = layers.Input(shape=(TARGET_HEIGHT, TARGET_WIDTH, 3), name='ImageInput')\n",
+    "input_tensor = layers.Input(shape=(TARGET_HEIGHT, TARGET_WIDTH, 3), name='ImageInput')\n",
     "\n",
-    "# model = ConvNeXtBase(include_top=False, weights='imagenet', input_tensor=input_tensor, include_preprocessing=False)"
+    "model = ConvNeXtBase(include_top=False, weights='imagenet', input_tensor=input_tensor, include_preprocessing=False)"
    ]
   },
   {
@@ -1020,7 +1019,7 @@
    },
    "outputs": [],
    "source": [
-    "# model.summary()"
+    "model.summary()"
    ]
   },
   {
@@ -1037,7 +1036,7 @@
    "outputs": [],
    "source": [
     "# model_path='./serialized_models/pretrain_model_ConvNeXtBase_w_ClssWgt_01-0.3887.h5'\n",
-    "model_path='./serialized_models/pretrain_model_ConvNeXtBase_w_ClssWgt_01-0.4021.h5'\n",
+    "# model_path='./serialized_models/pretrain_model_ConvNeXtBase_w_ClssWgt_01-0.4021.h5'\n",
     "# model_path='./serialized_models/pretrain_model_ConvNeXtSmall_w_ClssWgt_03-0.5216.h5'"
    ]
   },
@@ -1047,8 +1046,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from keras.applications.convnext import LayerScale\n",
-    "model = tf.keras.models.load_model(model_path, custom_objects={'LayerScale': LayerScale})"
+    "# from keras.applications.convnext import LayerScale\n",
+    "# model = tf.keras.models.load_model(model_path, custom_objects={'LayerScale': LayerScale})"
    ]
   },
   {
@@ -1273,11 +1272,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# lr_loss_df = determine_learning_rate(X=X_train, \n",
-    "#                                      y=y_train, \n",
-    "#                                      batch_size=2, \n",
-    "#                                      lr_list=[1e-2, 5e-3, 1e-3, 5e-4, 1e-4, 5e-5, 1e-5, 5e-6, 1e-6, 1e-7, 1e-8,],\n",
-    "#                                      steps=200)"
+    "lr_loss_df = determine_learning_rate(X=X_train, \n",
+    "                                     y=y_train, \n",
+    "                                     batch_size=2, \n",
+    "                                     lr_list=[1e-2, 5e-3, 1e-3, 5e-4, 1e-4, 5e-5, 1e-5, 5e-6, 1e-6, 1e-7, 1e-8,],\n",
+    "                                     steps=200)"
    ]
   },
   {
@@ -1405,7 +1404,7 @@
    "source": [
     "epochs = 20\n",
     "batch_size = 4\n",
-    "model_path='./serialized_models/pretrain_model_ConvNeXtBase_w_ClssWgt_{epoch:02d}-{val_loss:.4f}.h5'\n",
+    "model_path='../models/pretrain_model_ConvNeXtBase_w_ClssWgt_{epoch:02d}-{val_loss:.4f}.h5'\n",
     "\n",
     "callbacks = [\n",
     "    tf.keras.callbacks.ModelCheckpoint(filepath=model_path, save_best_only=True),\n",
