moving classification metric code out of the notebook

--- a/notebooks/model_analysis.ipynb
+++ b/notebooks/model_analysis.ipynb
@@ -17,6 +17,7 @@
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
     "\n",
+    "from classification_metrics import plot_confusion_matrix, print_confidence_intervals, get_performance_metrics, bootstrap_auc, plot_calibration_curve, roc_auc_score, get_accuracy, get_prevalence, get_sensitivity, get_specificity, get_ppv, get_npv \n",
     "from data_preparation import prepare_data"
    ]
   },
@@ -233,238 +234,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def true_positives(y, pred, th=0.5):\n",
-    "    pred_t = (pred > th)\n",
-    "    return np.sum((pred_t == True) & (y == 1))\n",
-    "\n",
-    "\n",
-    "def true_negatives(y, pred, th=0.5):\n",
-    "    pred_t = (pred > th)\n",
-    "    return np.sum((pred_t == False) & (y == 0))\n",
-    "\n",
-    "\n",
-    "def false_negatives(y, pred, th=0.5):\n",
-    "    pred_t = (pred > th)\n",
-    "    return np.sum((pred_t == False) & (y == 1))\n",
-    "\n",
-    "\n",
-    "def false_positives(y, pred, th=0.5):\n",
-    "    pred_t = (pred > th)\n",
-    "    return np.sum((pred_t == True) & (y == 0))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_performance_metrics(y, pred, class_labels, tp=true_positives,\n",
-    "                            tn=true_negatives, fp=false_positives,\n",
-    "                            fn=false_negatives,\n",
-    "                            acc=None, prevalence=None, spec=None,\n",
-    "                            sens=None, ppv=None, npv=None, auc=None, f1=None,\n",
-    "                            thresholds=[]):\n",
-    "    if len(thresholds) != len(class_labels):\n",
-    "        thresholds = [.5] * len(class_labels)\n",
-    "\n",
-    "    metrics = [tp, tn, fp, fn, acc, prevalence, sens, spec, ppv, npv, auc, f1]\n",
-    "    metric_names = [\"TP\", \"TN\", \"FP\", \"FN\", \"Accuracy\", \"Prevalence\",\n",
-    "                    \"Sensitivity\", \"Specificity\", \"PPV\", \"NPV\", \"AUC\", \"F1\"]\n",
-    "\n",
-    "    df = pd.DataFrame(index=class_labels, columns=metric_names + [\"Threshold\"])\n",
-    "\n",
-    "    for i, label in enumerate(class_labels):\n",
-    "        for metric, name in zip(metrics, metric_names):\n",
-    "            if metric is not None:\n",
-    "                try:\n",
-    "                    if name in [\"AUC\", \"F1\"]:\n",
-    "                        df.loc[label, name] = round(metric(y[:, i], pred[:, i]), 3)\n",
-    "                    elif name == \"Prevalence\":\n",
-    "                        df.loc[label, name] = round(metric(y[:, i]), 3)\n",
-    "                    else:\n",
-    "                        df.loc[label, name] = round(metric(y[:, i], pred[:, i], thresholds[i]), 3)\n",
-    "                except Exception as e:\n",
-    "                    print(f\"Exception occurred in {name}: {e}\")\n",
-    "                    df.loc[label, name] = np.NAN\n",
-    "            else:\n",
-    "                df.loc[label, name] = \"Not Defined\"\n",
-    "        df.loc[label, \"Threshold\"] = round(thresholds[i], 3)\n",
-    "\n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def print_confidence_intervals(class_labels, statistics):\n",
-    "    df = pd.DataFrame(columns=[\"Mean AUC (CI 5%-95%)\"])\n",
-    "    for i in range(len(class_labels)):\n",
-    "        mean = statistics.mean(axis=1)[i]\n",
-    "        max_ = np.quantile(statistics, .95, axis=1)[i]\n",
-    "        min_ = np.quantile(statistics, .05, axis=1)[i]\n",
-    "        df.loc[class_labels[i]] = [\"%.2f (%.2f-%.2f)\" % (mean, min_, max_)]\n",
-    "    return df\n",
-    "\n",
-    "\n",
-    "def get_curve(gt, pred, target_names, curve='roc'):\n",
-    "    for i in range(len(target_names)):\n",
-    "        if curve == 'roc':\n",
-    "            curve_function = roc_curve\n",
-    "            auc_roc = roc_auc_score(gt[:, i], pred[:, i])\n",
-    "            label = target_names[i] + \" AUC: %.3f \" % auc_roc\n",
-    "            xlabel = \"False positive rate\"\n",
-    "            ylabel = \"True positive rate\"\n",
-    "            a, b, _ = curve_function(gt[:, i], pred[:, i])\n",
-    "            plt.figure(1, figsize=(7, 7))\n",
-    "            plt.plot([0, 1], [0, 1], 'k--')\n",
-    "            plt.plot(a, b, label=label)\n",
-    "            plt.xlabel(xlabel)\n",
-    "            plt.ylabel(ylabel)\n",
-    "\n",
-    "            plt.legend(loc='upper center', bbox_to_anchor=(1.3, 1),\n",
-    "                       fancybox=True, ncol=1)\n",
-    "        elif curve == 'prc':\n",
-    "            precision, recall, _ = precision_recall_curve(gt[:, i], pred[:, i])\n",
-    "            average_precision = average_precision_score(gt[:, i], pred[:, i])\n",
-    "            label = target_names[i] + \" Avg.: %.3f \" % average_precision\n",
-    "            plt.figure(1, figsize=(7, 7))\n",
-    "            plt.step(recall, precision, where='post', label=label)\n",
-    "            plt.xlabel('Recall')\n",
-    "            plt.ylabel('Precision')\n",
-    "            plt.ylim([0.0, 1.05])\n",
-    "            plt.xlim([0.0, 1.0])\n",
-    "            plt.legend(loc='upper center', bbox_to_anchor=(1.3, 1),\n",
-    "                       fancybox=True, ncol=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_accuracy(y, pred, th=0.5):\n",
-    "    \"\"\"\n",
-    "    Compute accuracy of predictions at threshold.\n",
-    "\n",
-    "    Args:\n",
-    "        y (np.array): ground truth, size (n_examples)\n",
-    "        pred (np.array): model output, size (n_examples)\n",
-    "        th (float): cutoff value for positive prediction from model\n",
-    "    Returns:\n",
-    "        accuracy (float): accuracy of predictions at threshold\n",
-    "    \"\"\"\n",
-    "    TP = true_positives(y, pred, th)\n",
-    "    FP = false_positives(y, pred, th)\n",
-    "    TN = true_negatives(y, pred, th)\n",
-    "    FN = false_negatives(y, pred, th)\n",
-    "\n",
-    "    total = TP + TN + FP + FN\n",
-    "    accuracy = (TP + TN) / total if total else 0.0\n",
-    "    \n",
-    "    return accuracy\n",
-    "\n",
-    "def get_prevalence(y):\n",
-    "    \"\"\"\n",
-    "    Compute prevalence of positive cases.\n",
-    "\n",
-    "    Args:\n",
-    "        y (np.array): ground truth, size (n_examples)\n",
-    "    Returns:\n",
-    "        prevalence (float): prevalence of positive cases\n",
-    "    \"\"\"\n",
-    "    total = len(y)\n",
-    "    prevalence = np.sum(y) / total if total else 0.0\n",
-    "    \n",
-    "    return prevalence\n",
-    "\n",
-    "def get_sensitivity(y, pred, th=0.5):\n",
-    "    \"\"\"\n",
-    "    Compute sensitivity of predictions at threshold.\n",
-    "\n",
-    "    Args:\n",
-    "        y (np.array): ground truth, size (n_examples)\n",
-    "        pred (np.array): model output, size (n_examples)\n",
-    "        th (float): cutoff value for positive prediction from model\n",
-    "    Returns:\n",
-    "        sensitivity (float): probability that our test outputs positive given that the case is actually positive\n",
-    "    \"\"\"\n",
-    "    TP = true_positives(y, pred, th)\n",
-    "    FN = false_negatives(y, pred, th)\n",
-    "\n",
-    "    total = TP + FN\n",
-    "    sensitivity = TP / total if total else 0.0\n",
-    "    \n",
-    "    return sensitivity\n",
-    "\n",
-    "def get_specificity(y, pred, th=0.5):\n",
-    "    \"\"\"\n",
-    "    Compute specificity of predictions at threshold.\n",
-    "\n",
-    "    Args:\n",
-    "        y (np.array): ground truth, size (n_examples)\n",
-    "        pred (np.array): model output, size (n_examples)\n",
-    "        th (float): cutoff value for positive prediction from model\n",
-    "    Returns:\n",
-    "        specificity (float): probability that the test outputs negative given that the case is actually negative\n",
-    "    \"\"\"\n",
-    "    TN = true_negatives(y, pred, th)\n",
-    "    FP = false_positives(y, pred, th)\n",
-    "    \n",
-    "    total = TN + FP\n",
-    "    specificity = TN / total if total else 0.0\n",
-    "    \n",
-    "    return specificity\n",
-    "\n",
-    "def get_ppv(y, pred, th=0.5):\n",
-    "    \"\"\"\n",
-    "    Compute PPV of predictions at threshold.\n",
-    "\n",
-    "    Args:\n",
-    "        y (np.array): ground truth, size (n_examples)\n",
-    "        pred (np.array): model output, size (n_examples)\n",
-    "        th (float): cutoff value for positive prediction from model\n",
-    "    Returns:\n",
-    "        PPV (float): positive predictive value of predictions at threshold\n",
-    "    \"\"\"\n",
-    "    TP = true_positives(y, pred, th)\n",
-    "    FP = false_positives(y, pred, th)\n",
-    "\n",
-    "    total = TP + FP\n",
-    "    PPV = TP / total if total else 0.0\n",
-    "    \n",
-    "    return PPV\n",
-    "\n",
-    "def get_npv(y, pred, th=0.5):\n",
-    "    \"\"\"\n",
-    "    Compute NPV of predictions at threshold.\n",
-    "\n",
-    "    Args:\n",
-    "        y (np.array): ground truth, size (n_examples)\n",
-    "        pred (np.array): model output, size (n_examples)\n",
-    "        th (float): cutoff value for positive prediction from model\n",
-    "    Returns:\n",
-    "        NPV (float): negative predictive value of predictions at threshold\n",
-    "    \"\"\"\n",
-    "    TN = true_negatives(y, pred, th)\n",
-    "    FN = false_negatives(y, pred, th)\n",
-    "\n",
-    "    total = TN + FN\n",
-    "    NPV = TN / total if total else 0.0\n",
-    "    \n",
-    "    return NPV"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "get_performance_metrics(y, pred, target_columns, acc=get_accuracy, prevalence=get_prevalence, \n",
     "                        sens=get_sensitivity, spec=get_specificity, ppv=get_ppv, npv=get_npv, auc=roc_auc_score, f1=f1_score)"
    ]
@@ -475,25 +244,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def bootstrap_auc(y, pred, classes, bootstraps=100, fold_size=1000):\n",
-    "    statistics = np.full((len(classes), bootstraps), 0.0)\n",
-    "\n",
-    "    for c in range(len(classes)):\n",
-    "        df = pd.DataFrame({'y': y[:, c], 'pred': pred[:, c]})\n",
-    "        prevalences = df.groupby('y').size() / len(df)\n",
-    "\n",
-    "        for i in range(bootstraps):\n",
-    "            samples = df.groupby('y').apply(lambda group: group.sample(n=int(fold_size * prevalences[group.name]), replace=True))\n",
-    "            y_sample = samples.y.values\n",
-    "            pred_sample = samples.pred.values\n",
-    "\n",
-    "            try:\n",
-    "                statistics[c, i] = roc_auc_score(y_sample, pred_sample)\n",
-    "            except ValueError:\n",
-    "                pass  # Keep default score of 0 if AUC cannot be calculated\n",
-    "\n",
-    "    return statistics\n",
-    "\n",
     "statistics = bootstrap_auc(y, pred, target_columns)"
    ]
   },
@@ -504,27 +254,6 @@
    "outputs": [],
    "source": [
     "print_confidence_intervals(target_columns, statistics)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.calibration import calibration_curve\n",
-    "def plot_calibration_curve(y, pred):\n",
-    "    plt.figure(figsize=(20, 20))\n",
-    "    for i in range(len(target_columns)):\n",
-    "        plt.subplot(4, 4, i + 1)\n",
-    "        fraction_of_positives, mean_predicted_value = calibration_curve(y[:,i], pred[:,i], n_bins=20)\n",
-    "        plt.plot([0, 1], [0, 1], linestyle='--')\n",
-    "        plt.plot(mean_predicted_value, fraction_of_positives, marker='.')\n",
-    "        plt.xlabel(\"Predicted Value\")\n",
-    "        plt.ylabel(\"Fraction of Positives\")\n",
-    "        plt.title(target_columns[i])\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()"
    ]
   },
   {
