Cleaning up model preprocessing code and data loading

--- a/notebooks/class_activation_map_visualization.ipynb
+++ b/notebooks/class_activation_map_visualization.ipynb
@@ -13,7 +13,10 @@
     "import pandas as pd\n",
     "from PIL import Image\n",
     "import tensorflow as tf\n",
-    "from tensorflow import keras"
+    "from tensorflow import keras\n",
+    "\n",
+    "from data_preparation import prepare_data\n",
+    "from model_preprocessing import convert_image_to_array, model_predict"
    ]
   },
   {
@@ -39,9 +42,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "root_directory = '/data/CheXpert-v1.0'\n",
-    "valid_folder = os.path.join(root_directory, 'valid')\n",
-    "valid_labels_df = pd.read_csv(os.path.join(root_directory, 'valid.csv'))"
+    "X_val, y_val, valid_labels_df, targets = prepare_data()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MODEL_NAME = 'pretrain_model_ConvNeXtBase_w_ClssWgt_01-0.3616.h5'\n",
+    "model_path = f'../models/{MODEL_NAME}'\n",
+    "model = tf.keras.models.load_model(model_path, custom_objects={'LayerScale': LayerScale})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.summary()"
    ]
   },
   {
@@ -57,7 +85,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MY_IMG_PATH = X_test[6]"
+    "MY_IMG_PATH = X_val[6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MY_IMG_PATH"
    ]
   },
   {
@@ -83,24 +120,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_test.reset_index(drop=True, inplace=True)\n",
-    "y_test.reset_index(drop=True, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "test_num = 9\n",
     "\n",
-    "X_test_example = X_test[test_num]\n",
-    "y_test_example = y_test[test_num]\n",
+    "X_val_example = X_val[test_num]\n",
+    "y_val_example = y_val[test_num]\n",
     "\n",
-    "y_hat = model_predict(path=X_test_example, model=model)\n",
+    "y_hat = model_predict(path=X_val_example, model=model)\n",
     "\n",
-    "print(f'Ground truth label: {y_test_example} \\n Predicted label: {np.argmax(y_hat)} \\t Probability: {np.max(y_hat)}')"
+    "print(f'Ground truth label: {y_val_example} \\n Predicted label: {np.argmax(y_hat)} \\t Probability: {np.max(y_hat)}')"
    ]
   },
   {
