--- a/notebooks/model_analysis.ipynb
+++ b/notebooks/model_analysis.ipynb
@@ -17,8 +17,9 @@
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
     "\n",
-    "from classification_metrics import plot_confusion_matrix, print_confidence_intervals, get_performance_metrics, bootstrap_auc, plot_calibration_curve, roc_auc_score, get_accuracy, get_prevalence, get_sensitivity, get_specificity, get_ppv, get_npv \n",
-    "from data_preparation import prepare_data"
+    "from classification_metrics import print_confidence_intervals, get_performance_metrics, bootstrap_auc, plot_calibration_curve, roc_auc_score, get_accuracy, get_prevalence, get_sensitivity, get_specificity, get_ppv, get_npv \n",
+    "from data_preparation import prepare_data\n",
+    "from model_preprocessing import convert_image_to_array, model_predict"
    ]
   },
   {
@@ -78,24 +79,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MODEL_NAME = 'pretrain_model_ConvNeXtBase_w_ClssWgt_01-0.3616.h5'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_path = f'../models/{MODEL_NAME}'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "MODEL_NAME = 'pretrain_model_ConvNeXtBase_w_ClssWgt_01-0.3616.h5'\n",
+    "model_path = f'../models/{MODEL_NAME}'\n",
     "model = tf.keras.models.load_model(model_path, custom_objects={'LayerScale': LayerScale})"
    ]
   },
@@ -130,11 +115,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def convert_image_to_array(path):\n",
+    "def convert_image_to_array(path, target_height, target_width):\n",
     "    img = np.asarray(Image.open(path), dtype=np.float32)\n",
     "    img = np.stack((img,)*3, axis=-1)\n",
     "    img /= 255.\n",
-    "    img = tf.image.resize_with_pad(img, target_height=TARGET_HEIGHT, target_width=TARGET_WIDTH)\n",
+    "    img = tf.image.resize_with_pad(img, target_height=target_height, target_width=target_width)\n",
     "    return img"
    ]
   },
@@ -144,8 +129,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def model_predict(path, model):\n",
-    "    x = convert_image_to_array(path=path)\n",
+    "def model_predict(path, model, target_height, target_width):\n",
+    "    x = convert_image_to_array(path=path, target_height=target_height, target_width=target_width)\n",
     "    x = np.expand_dims(x, axis=0)\n",
     "    return model.predict(x)"
    ]
@@ -178,7 +163,7 @@
     "for i, path in enumerate(X_val):\n",
     "    if i % 10 == 0:\n",
     "        print(f'{i} out of {len(X_val)}')\n",
-    "    all_model_preds.iloc[i, :] = model_predict(path=path, model=model)[0]"
+    "    all_model_preds.iloc[i, :] = model_predict(path=path, model=model, target_height=TARGET_HEIGHT, target_width=TARGET_WIDTH)[0]"
    ]
   },
   {
@@ -187,7 +172,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_model_preds"
+    "all_model_preds.head()"
    ]
   },
   {
@@ -262,7 +247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_calibration_curve(y, pred)"
+    "plot_calibration_curve(y, pred, target_columns)"
    ]
   },
   {
