Getting the class activation mapping code working

--- a/notebooks/model_analysis.ipynb
+++ b/notebooks/model_analysis.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "from classification_metrics import print_confidence_intervals, get_performance_metrics, bootstrap_auc, plot_calibration_curve, roc_auc_score, get_accuracy, get_prevalence, get_sensitivity, get_specificity, get_ppv, get_npv \n",
     "from data_preparation import prepare_data\n",
-    "from model_preprocessing import convert_image_to_array, model_predict"
+    "from model_preprocessing import model_predict"
    ]
   },
   {
@@ -107,32 +107,6 @@
    "metadata": {},
    "source": [
     "CAUTION! Make sure the preprocessing matches what was used during model training "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def convert_image_to_array(path, target_height, target_width):\n",
-    "    img = np.asarray(Image.open(path), dtype=np.float32)\n",
-    "    img = np.stack((img,)*3, axis=-1)\n",
-    "    img /= 255.\n",
-    "    img = tf.image.resize_with_pad(img, target_height=target_height, target_width=target_width)\n",
-    "    return img"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def model_predict(path, model, target_height, target_width):\n",
-    "    x = convert_image_to_array(path=path, target_height=target_height, target_width=target_width)\n",
-    "    x = np.expand_dims(x, axis=0)\n",
-    "    return model.predict(x)"
    ]
   },
   {
