Fixing image scaling bug

--- a/notebooks/Model_Training.ipynb
+++ b/notebooks/Model_Training.ipynb
@@ -536,7 +536,7 @@
    "outputs": [],
    "source": [
     "if USE_CLASS_WEIGHTS:\n",
-    "    CLASS_WEIGHTS = cls_weights_sqrt\n",
+    "    CLASS_WEIGHTS = cls_weights_log\n",
     "else:\n",
     "    CLASS_WEIGHTS = None"
    ]
@@ -656,7 +656,7 @@
     "    img = np.stack((img,)*3, axis=-1)\n",
     "\n",
     "    # add image augmentation\n",
-    "    if np.random.uniform() < 0.6:\n",
+    "    if np.random.uniform() < 0.5:\n",
     "        img = apply_mask(img, size=np.random.randint(low=70, high=240), n_squares=np.random.randint(low=2, high=12))\n",
     "    else:\n",
     "        if np.random.uniform() < 0.15:\n",
@@ -1205,7 +1205,7 @@
     "        )\n",
     "        \n",
     "        hist = model.fit(\n",
-    "            x=data_gen(X=X, y=y, batch_size=batch_size, scale_image=False), \n",
+    "            x=data_gen(X=X, y=y, batch_size=batch_size, scale_image=True), \n",
     "            epochs=1, \n",
     "            steps_per_epoch=steps,\n",
     "            class_weight=CLASS_WEIGHTS,\n",
@@ -1361,7 +1361,89 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## (Optional) Train on small sample\n",
+    "\n",
+    "The idea here is to train the model on a very small sample of the data as a kind of quality check so that even if it's overfitting we ensure that the model can learn the data and there's not some issue with our training/data pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lr_schedule_sample = keras.optimizers.schedules.CosineDecayRestarts(\n",
+    "      initial_learning_rate=1e-7,\n",
+    "      first_decay_steps=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_sample = X_train[:20]\n",
+    "y_train_sample = y_train[:20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epochs_sample = 100\n",
+    "batch_size_sample = 4\n",
+    "\n",
+    "model.compile(\n",
+    "    optimizer=tf.keras.optimizers.Adam(learning_rate=lr_schedule_sample),\n",
+    "#     optimizer=tf.keras.optimizers.Adam(learning_rate=1e-5),\n",
+    "    loss=\"binary_crossentropy\",\n",
+    "    metrics=[\"accuracy\"],\n",
+    ")\n",
+    "model.fit(\n",
+    "    x=data_gen(X=X_train_sample, y=y_train_sample, batch_size=batch_size_sample, scale_image=True), \n",
+    "    epochs=epochs_sample, \n",
+    "#     validation_data=val_data, \n",
+    "    steps_per_epoch=int(40/batch_size_sample),\n",
+    "    class_weight=CLASS_WEIGHTS,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Train the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class WarmUpLearningRateScheduler(tf.keras.callbacks.Callback):\n",
+    "    def __init__(self, warmup_epochs, init_lr, verbose=0):\n",
+    "        \"\"\"\n",
+    "        Constructor for the class.\n",
+    "        :param warmup_epochs {int}: Number of epoch for which learning rate will be increased linearly.\n",
+    "        :param init_lr {float}: Initial learning rate during warmup phase.\n",
+    "        :param verbose {int}: 0: quiet, 1: update messages.\n",
+    "        \"\"\"\n",
+    "        super(WarmUpLearningRateScheduler, self).__init__()\n",
+    "        self.warmup_epochs = warmup_epochs\n",
+    "        self.init_lr = init_lr\n",
+    "        self.verbose = verbose\n",
+    "\n",
+    "    def on_epoch_end(self, epoch, logs=None):\n",
+    "        if epoch+1 <= self.warmup_epochs:\n",
+    "            lr = self.init_lr * (epoch+1) / self.warmup_epochs\n",
+    "            tf.keras.backend.set_value(self.model.optimizer.lr, lr)\n",
+    "            if self.verbose > 0:\n",
+    "                print('\\nEpoch %05d: WarmUpLearningRateScheduler setting learning '\n",
+    "                      'rate to %s.' % (epoch + 1, lr))"
    ]
   },
   {
@@ -1372,6 +1454,7 @@
    "source": [
     "lr_schedule = keras.optimizers.schedules.CosineDecayRestarts(\n",
     "      initial_learning_rate=3e-3,\n",
+    "#       initial_learning_rate=3e-4,\n",
     "      first_decay_steps=7979)"
    ]
   },
@@ -1394,14 +1477,16 @@
    },
    "outputs": [],
    "source": [
-    "epochs = 2\n",
+    "epochs = 20\n",
     "batch_size = 4\n",
     "model_path='../models/pretrain_model_ConvNeXtBase_w_ClssWgt_{epoch:02d}-{val_loss:.4f}.h5'\n",
     "\n",
     "callbacks = [\n",
-    "    tf.keras.callbacks.ModelCheckpoint(filepath=model_path, save_best_only=True),\n",
+    "#     tf.keras.callbacks.ModelCheckpoint(filepath=model_path, save_best_only=True),\n",
+    "    tf.keras.callbacks.ModelCheckpoint(filepath=model_path),\n",
     "    tf.keras.callbacks.ReduceLROnPlateau(patience=3),\n",
-    "    tf.keras.callbacks.EarlyStopping(patience=10)\n",
+    "#     tf.keras.callbacks.EarlyStopping(patience=10),\n",
+    "#     WarmUpLearningRateScheduler(warmup_epochs=3, init_lr=1e-5)\n",
     "]\n",
     "model.compile(\n",
     "    optimizer=tf.keras.optimizers.Adam(learning_rate=lr_schedule),\n",
@@ -1409,7 +1494,7 @@
     "    metrics=[\"accuracy\"],\n",
     ")\n",
     "model.fit(\n",
-    "    x=data_gen(X=X_train, y=y_train, batch_size=batch_size, scale_image=False), \n",
+    "    x=data_gen(X=X_train, y=y_train, batch_size=batch_size, scale_image=True), \n",
     "    epochs=epochs, \n",
     "    callbacks=callbacks, \n",
     "    validation_data=val_data, \n",
