--- a/notebooks/Model_Training.ipynb
+++ b/notebooks/Model_Training.ipynb
@@ -10,22 +10,7 @@
     "\n",
     "Train a classification model using human radiograph images. We will then use class activation mapping to extract heatmaps to help localize any lesions.\n",
     "\n",
-    "For the dataset, labels were extracted from the radiologist report where: blank for unmentioned, 0 for negative, -1 for uncertain, and 1 for positive. See [here](https://stanfordmlgroup.github.io/competitions/chexpert/)\n",
-    "\n",
-    "### TODO \n",
-    "\n",
-    "- X Add learning rate scheduler to training. See keras options, and [this](https://www.jeremyjordan.me/nn-learning-rate/) blog post.\n",
-    "- X Add performance analysis\n",
-    "- X Add cutout augmentation as *last* augmentation. Do this in the other training notebook as well\n",
-    "- X Add class weights\n",
-    "- Add Lion optimizer\n",
-    "- Add error analysis\n",
-    "- Add k-fold cross validation\n",
-    "- See what happens if a portion of the model is frozen (e.g. freeze the weights half way through)\n",
-    "- Get heatmap piece at end working, so that you can visualize the argmax class of an image\n",
-    "----------------------------------------\n",
-    "- Move model performance code into it's own notebook/script\n",
-    "- Pull out preprocessing and metric functions into a utilities script"
+    "For the dataset, labels were extracted from the radiologist report where: blank for unmentioned, 0 for negative, -1 for uncertain, and 1 for positive. See [here](https://stanfordmlgroup.github.io/competitions/chexpert/)"
    ]
   },
   {
@@ -980,8 +965,8 @@
     "\n",
     "input_tensor = layers.Input(shape=(TARGET_HEIGHT, TARGET_WIDTH, 3), name='ImageInput')\n",
     "\n",
-    "# model = ConvNeXtBase(include_top=False, weights='imagenet', input_tensor=input_tensor, include_preprocessing=False)\n",
-    "model = ConvNeXtBase(include_top=False, weights='imagenet', input_tensor=input_tensor, include_preprocessing=True)"
+    "model = ConvNeXtBase(include_top=False, weights='imagenet', input_tensor=input_tensor, include_preprocessing=False)\n",
+    "# model = ConvNeXtBase(include_top=False, weights='imagenet', input_tensor=input_tensor, include_preprocessing=True)"
    ]
   },
   {
@@ -1373,7 +1358,7 @@
    "outputs": [],
    "source": [
     "lr_schedule_sample = keras.optimizers.schedules.CosineDecayRestarts(\n",
-    "      initial_learning_rate=1e-7,\n",
+    "      initial_learning_rate=3e-4,\n",
     "      first_decay_steps=20)"
    ]
   },
@@ -1453,8 +1438,8 @@
    "outputs": [],
    "source": [
     "lr_schedule = keras.optimizers.schedules.CosineDecayRestarts(\n",
-    "      initial_learning_rate=3e-3,\n",
-    "#       initial_learning_rate=3e-4,\n",
+    "#       initial_learning_rate=3e-3,\n",
+    "      initial_learning_rate=3e-4,\n",
     "      first_decay_steps=7979)"
    ]
   },
@@ -1477,14 +1462,14 @@
    },
    "outputs": [],
    "source": [
-    "epochs = 20\n",
+    "epochs = 30\n",
     "batch_size = 4\n",
     "model_path='../models/pretrain_model_ConvNeXtBase_w_ClssWgt_{epoch:02d}-{val_loss:.4f}.h5'\n",
     "\n",
     "callbacks = [\n",
     "#     tf.keras.callbacks.ModelCheckpoint(filepath=model_path, save_best_only=True),\n",
     "    tf.keras.callbacks.ModelCheckpoint(filepath=model_path),\n",
-    "    tf.keras.callbacks.ReduceLROnPlateau(patience=3),\n",
+    "#     tf.keras.callbacks.ReduceLROnPlateau(patience=3),\n",
     "#     tf.keras.callbacks.EarlyStopping(patience=10),\n",
     "#     WarmUpLearningRateScheduler(warmup_epochs=3, init_lr=1e-5)\n",
     "]\n",
@@ -1501,6 +1486,23 @@
     "    steps_per_epoch=int(NUM_TRAIN/batch_size),\n",
     "    class_weight=CLASS_WEIGHTS,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Epoch 1\n",
+    "- Starting point: loss: 0.75, accuracy 0.25\n",
+    "- 1700/55853: loss: 0.74, accuracy 0.1625\n",
+    "- 9600/55853: loss: 0.717, accuracy 0.2226\n",
+    "- 18000/55853: loss: 0.699, accuracy 0.2762\n",
+    "- 37000/55853: loss: 0.683, accuracy 0.3229\n",
+    "- 46500/55853: loss: 0.674, accuracy 0.3385\n",
+    "- 54000/55853: loss: 0.668, accuracy 0.3492\n",
+    "------------------------------------\n",
+    "- Epoch 2\n",
+    "- 1000/55853: loss: 0.639, accuracy 0.402"
    ]
   },
   {
